# ros2_pong_semiautomatic

./: CMakeLists.txt  README.md  package.xml  package.xml.save
include/ros2_pong_semiautomatic/: game_manager.hpp
launch/: launch_example1.launch.py
msg/: GameState.txt
src/: game_manager.cpp
